ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonasid-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: azure-application-gateway
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonasid-service
            port:
              number: 80
